--- a/src/pages/login/styles/login.module.css
+++ b/src/pages/login/styles/login.module.css
@@ -1,6 +1,13 @@
+.line {
+  width: 100%;
+  height: 1px;
+  background-color: #d3d3d3;
+}
+
 .sectionContainer {
-  height: 100vh;
-  background-color: #fafafa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .mainContainer {
@@ -9,98 +16,56 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #fafafa;
 }
 
-.inputContainer {
+.formContainer {
   display: grid;
-  width: 90%;
-  height: 100%;
-  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 
-.line {
-  width: 100%;
-  height: 1px;
-  background-color: #e5e7eb;
+.formContainer h1 {
+  font-size: 2rem;
+  font-weight: 700;
 }
 
-.input {
-  border-radius: 8px;
-  height: 32px;
-  width: 100%;
-  background-clip: padding-box;
-  border-style: solid;
-  border-color: rgb(209 213 219);
-  text-decoration-color: rgb(55 65 81);
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-duration: 150ms;
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  color: #374151;
-  background-color: #f2f2f5;
-  outline: none;
-  padding: 1rem;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.75rem;
-
-}
-
-.input:focus {
-  border-color: #2563EB;
-  color: #374151;
-  background-color: #fff;
-  outline: none;
-}
-
-.button {
-  background-color: #2563EB;
-  border-radius: 8px;
-  width: 120px;
-  height: 40px;
-  border-style: none;
-  text-decoration-color: rgb(55 65 81);
-}
-
-.registerContainer {
-  margin-top: 8px;
-  font-weight: 200;
-  font-size: 16px;
-  color: #000;
-  font-family: 'Roboto', sans-serif;
-}
-
-.registerSpan {
-  color: red;
-}
-
-.rememberAndPasswordContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.rememberMeContainer {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  color: #000;
-  font-weight: 200;
-  font-size: 16px;
-  font-family: 'Roboto', sans-serif;
 }
 
-.rememberContainer {
+.rememberMeContainer div {
   display: flex;
   align-items: center;
   gap: 8px;
 }
 
-.passwordContainer {
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  gap: 8px;
+.span {
+  font-size: 0.875rem;
+  font-weight: bold;
+  color: red
 }
 
-.logintitle {
-  font-weight: 500;
-  font-size: 32px;
-  line-height: 2.5rem;
-  color: #374151;
-  font-family: 'Roboto', sans-serif;
+@media screen and (max-width: 768px) {
+  .mainContainer {
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+
+  .formContainer {
+    justify-content: center;
+    margin: 8px;
+  }
+
+  .formContainer h1 {
+    font-size: 1.5rem;
+  }
+
+  .imageContainer {
+    width: 100%;
+    margin: 8px;
+    height: fit-content;
+  }
 }
