--- a/src/pages/map/styles/MapHeader.module.css
+++ b/src/pages/map/styles/MapHeader.module.css
@@ -1,11 +1,105 @@
 .container {
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 45px;
+  width: calc(100% - 28em);
+  position: fixed;
+  padding: 0 10px;
+  top: 10px;
+  left: 27em;
+  z-index: 999;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  transform: translateY(-200%);
+  transition: all 0.4s ease;
+}
+
+.active {
+  transform: translateY(0);
+}
+
+.container::-webkit-scrollbar {
+  display: none;
+}
+
+.container::-webkit-scrollbar-track {
+  display: none;
+}
+
+.container::-webkit-scrollbar-thumb {
+  display: none;
+}
+
+
+.item {
+  background: #fff;
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin: 0 5px;
+  font-size: 12px;
+  color: #333;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+  display: flex;
   justify-content: center;
   align-items: center;
-  height: 20px;
-  width: 100vw;
+  gap: 10px;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+}
+
+.item:hover {
   background: #f5f5f5;
-  position: fixed;
-  top: 0;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.item.active {
+  background: #c7c7c7;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+
+.button_right {
+  background: #fff;
+  border-radius: 15px;
+  padding: 7px 20px;
+  height: 100%;
+  color: #333;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+
+  position: sticky;
+  top: 14px;
+  right: -10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+  z-index: 999;
+}
+
+.button_left {
+  background: #fff;
+  border-radius: 15px;
+  padding: 7px 20px;
+  height: 100%;
+  color: #333;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+
+  position: sticky;
+  top: 14px;
+  left: -10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
   z-index: 999;
 }
