--- a/src/pages/map/styles/MapSearch.module.css
+++ b/src/pages/map/styles/MapSearch.module.css
@@ -1,192 +1,79 @@
-.pageMap {
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-  display: flex;
-}
-
-.div {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.button-close {
-  /* background-image: url(../../assets/close.png); */
-  width: 20px;
-  height: 20px;
-  opacity: 1;
-}
-
-.button-close:hover {
-  cursor: pointer;
-  opacity: 1;
-}
-
-.toggle {
-  border: none;
-  cursor: pointer;
-  font-size: 20px;
-  padding: 15px 15px;
-  position: absolute;
-  top: 0;
-  right: 1px;
-  transform: translateX(100%);
-}
-
-.toggle:focus {
-  outline: none;
-}
-
-.toggle .fa-bars {
-  display: block;
-}
-
-.active .toggle .fa-bars {
-  display: none;
-}
-
-.topnav-map {
+.topnavmap {
   position: fixed;
-  width: 17rem;
+  width: 25rem;
   height: 100%;
-  background: linear-gradient(329.54deg, #183883 0%, #5d74a8 100%);
-  box-shadow: 0 0px 0px rgba(0, 0, 0, 1);
   z-index: 1;
   transform: translateX(-100%);
   transition: transform 0.4s ease;
-  opacity: 0.97;
 }
 
-.topnav-map .active {
+.active {
   transform: translateX(0);
-  box-shadow: 0 0px 30px rgba(0, 0, 0, 1);
 }
 
-.tag {
-  padding: 10px 20px;
-  border-bottom: 0.5px solid white;
-}
-
-.leaflet-popup-content-wrapper {
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 20px;
-  box-shadow: none;
-}
-
-.mapPopup .leaflet-popup-content {
-  color: #183883;
-  font-size: 28px;
-  font-weight: bold;
-  margin: 8px 12px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.mapPopup .leaflet-popup-content a {
-  width: 40px;
-  height: 40px;
-  background: #46609c;
-  border-radius: 12px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.mapPopup .leaflet-popup-content a:hover {
-  cursor: pointer;
-  background-color: #2f4c8f;
-}
-
-.mapPopup .leaflet-popup-tip-container {
-  display: none;
-  position: relative;
+.desactive {
+  transform: translateX(-100%);
 }
 
 .search {
   height: 50px;
   position: relative;
-  width: 17rem;
-  height: 50px;
-  padding: 15px 15px;
+  width: 100%;
+  height: 45px;
+  /* padding: 15px 15px; */
+  display: flex;
+  align-items: center;
+  gap: 20px;
   margin-top: 10px;
   margin-left: 10px;
-  margin-bottom: 5px;
   background-color: white;
-  border-radius: 5px;
+  border: 1px solid #ccc;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
   /* transform: translateX(100%); */
+  border-radius: 5px;
   z-index: 1;
   animation: card 0.8s ease;
 }
 
-.search input {
-  margin-left: 20px;
-  padding-bottom: 10px;
-}
-
-.card {
-  top: 0;
-  margin-left: 20px;
-}
-
-.radio label {
-  font-family: "Roboto", sans-serif;
-  font-size: 15px;
-  line-height: 20px;
-  font-weight: 100;
-  letter-spacing: 0;
-  cursor: pointer;
-}
-
-.radio label:hover,
-.radio input[type="radio"]:hover:before {
-  color: black;
-  border-color: black;
-}
-
-.radio input[type="radio"]:before {
-  content: "";
-  background: #f4f4f4;
-  border-radius: 100%;
-  border: 1px solid #b4b4b4;
-  display: inline-block;
-  width: 13px;
-  height: 13px;
-  position: relative;
-  vertical-align: top;
-  cursor: pointer;
-  text-align: center;
-  transition: all 250ms ease;
-  margin-top: -1px;
-  margin-left: -1px;
-}
-
-.radio input[type="radio"]:checked:before {
-  background-color: black;
-  box-shadow: inset 0 0 0 2px #f4f4f4;
-}
-
-.radio input[type="radio"]:focus:before {
+.input {
+  width: 100%;
+  height: 100%;
+  border: none;
   outline: none;
-  border-color: black;
+  /* font-size: 1.2rem; */
+  font-weight: 500;
+  padding: 0 10px;
+  color: #333;
 }
 
-.radio input[type="radio"]:disabled:before {
-  box-shadow: inset 0 0 0 4px #f4f4f4;
-  border-color: #b4b4b4;
-  background: #b4b4b4;
+.input::placeholder {
+  color: #c7c7c7;
+  font-weight: 500;
 }
 
-.radio input[type="radio"]:empty:before {
-  margin-right: 0;
+.activecard {
+  box-shadow: none;
+  border-radius: 5px 5px 0 0;
 }
 
-.animation {
+.icon {
+  color: black;
+  font-size: 25px;
+  margin-left: 20px;
+}
+
+.icon:hover {
+  cursor: pointer;
+}
+
+.icon_config {
+  color: gray;
+  font-size: 25px;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.container_card {
+  transition: all 0.4s ease;
   animation: card 0.8s ease;
-}
-
-@media screen and (max-width: 720px) {
-  #sidebar {
-    overflow-y: scroll;
-  }
 }
