--- a/src/pages/map/styles/MapSideBar.module.css
+++ b/src/pages/map/styles/MapSideBar.module.css
@@ -1,13 +1,30 @@
 .sidebar {
   position: fixed;
-  width: 20rem;
+  z-index: 10;
+  width: 23rem;
   height: 100%;
-  background: linear-gradient(329.54deg, #183883 0%, #5d74a8 100%);
+  /* background: linear-gradient(329.54deg, #183883 0%, #5d74a8 100%); */
+  background-color: white;
+  color: rgb(80, 80, 80);
   box-shadow: 0 0px 0px rgba(0, 0, 0, 1);
-  z-index: 1;
   transform: translateX(-100%);
   transition: transform 0.4s ease;
   opacity: 0.97;
+  overflow-y: scroll;
+  font-family: "Roboto", sans-serif;
+}
+
+.sidebar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.sidebar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 10px;
 }
 
 .active {
@@ -16,65 +33,49 @@
 }
 
 .tag {
-  padding: 10px 20px;
-  border-bottom: 0.5px solid white;
+  padding: 10px 0;
+  border-bottom: 0.5px solid black;
 }
 
-.leaflet-popup-content-wrapper {
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 20px;
-  box-shadow: none;
+.title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  padding: 5px 20px;
 }
 
-.mapPopup .leaflet-popup-content {
-  color: #183883;
-  font-size: 28px;
-  font-weight: bold;
-  margin: 8px 12px;
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
 }
 
-.mapPopup .leaflet-popup-content a {
-  width: 40px;
-  height: 40px;
-  background: #46609c;
-  border-radius: 12px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.header .image {
+  height: 30px;
+  width: auto;
+  padding: 0 20px;
 }
 
-.mapPopup .leaflet-popup-content a:hover {
+.header .icon {
+  margin: 0 15px 0 0;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+}
+
+.header .icon:hover {
   cursor: pointer;
-  background-color: #2f4c8f;
+  color: rgb(36, 36, 36);
+  background-color: #f7f7f7;
 }
 
-.mapPopup .leaflet-popup-tip-container {
-  display: none;
-  position: relative;
-}
-
-.search {
-  height: 50px;
-  position: relative;
-  width: 17rem;
-  height: 50px;
-  padding: 15px 15px;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-bottom: 5px;
-  background-color: white;
-  border-radius: 5px;
-  /* transform: translateX(100%); */
-  z-index: 1;
-  animation: card 0.8s ease;
-}
-
-.search input {
-  margin-left: 20px;
-  padding-bottom: 10px;
+.icon {
+  color: black;
+  font-size: 15px;
 }
 
 .card {
@@ -82,16 +83,49 @@
   margin-left: 20px;
 }
 
-.radio label {
-  font-family: "Roboto", sans-serif;
+.range {
+  font-size: 15px;
+  font-weight: 100;
+  padding: 4px 20px;
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  white-space: nowrap;
+  gap: 10px;
+}
+
+.range input[type="range"] {
+  cursor: pointer;
+  width: 100%;
+}
+
+.events .radio {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.radio span {
+  margin-left: 6px;
+}
+
+.radio {
   font-size: 15px;
   line-height: 20px;
   font-weight: 100;
   letter-spacing: 0;
   cursor: pointer;
+  padding: 4px 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  transition: all 0.3s ease;
 }
 
-.radio label:hover,
+.radio:hover {
+  background: rgb(244, 244, 244, 0.5);
+}
+
 .radio input[type="radio"]:hover:before {
   color: black;
   border-color: black;
@@ -116,7 +150,6 @@
 
 .radio input[type="radio"]:checked:before {
   background-color: black;
-  box-shadow: inset 0 0 0 2px #f4f4f4;
 }
 
 .radio input[type="radio"]:focus:before {
@@ -136,6 +169,19 @@
 
 .animation {
   animation: card 0.8s ease;
+}
+
+.backdrop {
+  background-color: rgba(0, 0, 0, 0.2);
+  /* backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px); */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 720px) {
