--- a/src/pages/login/styles/login.module.css
+++ b/src/pages/login/styles/login.module.css
@@ -18,15 +18,23 @@
   height: 100vh;
 }
 
+.cardContainer {
+  background-color: #fff;
+  border-radius: 8px;
+  margin: 24px;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .1);
+}
+
 .formContainer {
   display: grid;
   justify-content: center;
   align-items: center;
   gap: 8px;
+  margin: 16px;
 }
 
 .formContainer h1 {
-  font-size: 2rem;
+  font-size: 30px;
   font-weight: 700;
 }
 
@@ -36,6 +44,10 @@
   justify-content: space-between;
 }
 
+.rememberMeContainer a:hover {
+  color: red
+}
+
 .rememberMeContainer div {
   display: flex;
   align-items: center;
@@ -43,15 +55,23 @@
 }
 
 .span {
-  font-size: 0.875rem;
   font-weight: bold;
-  color: red
+  color: #2563EB;
+}
+
+.createAccount {
+  display: flex;
+  gap: 8px;
 }
 
 @media screen and (max-width: 768px) {
   .mainContainer {
     grid-template-columns: 1fr;
     justify-content: center;
+  }
+
+  .cardContainer {
+    margin: 8px;
   }
 
   .formContainer {
