--- a/src/pages/register/styles/register.module.css
+++ b/src/pages/register/styles/register.module.css
@@ -1,27 +1,29 @@
 .sectionContainer {
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
 .cardContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 8px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
-  width: 80%;
+  width: 40%;
 }
 
 .formContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 8px;
   margin: 16px;
 }
 
 .formContainer div {
   display: grid;
+}
+
+.formContainer label {
+  font-size: 16px;
 }
