--- a/src/pages/register/styles/register.module.css
+++ b/src/pages/register/styles/register.module.css
@@ -20,10 +20,18 @@
   margin: 16px;
 }
 
+.formContainer h1 {
+  font-size: 24px;
+}
+
 .formContainer div {
   display: grid;
 }
 
 .formContainer label {
   font-size: 16px;
+}
+
+.line {
+  border: 1px solid #eaeaea;
 }
