--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,10 +33,10 @@ a {
 }
 
 button[type='submit'] {
-  background-color: #2563EB;
+  background-color: #2563eb;
   border-radius: 8px;
   width: 120px;
-  height: 40px;
+  padding: 12px 0;
   border-style: none;
   color: #fff;
   cursor: pointer;
@@ -44,7 +44,7 @@ button[type='submit'] {
 
 button[type='submit']:hover {
   transition: 0.2s;
-  background-color: #1D4ED8;
+  background-color: #1d4ed8;
 }
 
 input[type='text'],
@@ -53,23 +53,32 @@ input[type='password'] {
   height: 32px;
   background-clip: padding-box;
   border-style: solid;
-  border-color: rgb(209 213 219);
+  border-color: rgb(231, 231, 231);
   text-decoration-color: rgb(55 65 81);
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter;
   transition-duration: 150ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   color: #374151;
   background-color: #f2f2f5;
   outline: none;
-  padding: 8px;
+  padding: 4px 8px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.75rem;
 }
 
+input[type='text']:hover,
+input[type='password']:hover {
+  color: #374151;
+  background-color: #fff;
+  outline: none;
+}
+
 input[type='text']:focus,
 input[type='password']:focus {
-  border-color: #2563EB;
+  border-color: #2563eb;
   color: #374151;
   background-color: #fff;
   outline: none;
