--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -15,24 +15,24 @@
   0% {
     background-position: 0% 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0% 50%;
   }
 }
 
 .bannerImage {
-  margin-bottom: 2rem;
+  margin-bottom: 2.3rem;
   width: 100%;
   height: 100%;
 }
 
 .containerButtons {
-  margin: auto;
-  height: auto;
-  width: 20%;
+  width: 280px;
   background-color: #ffffff;
   position: absolute;
   left: 50%;
@@ -43,25 +43,26 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  gap: 12px;
   z-index: 9999;
-  padding: 3%;
+  padding: 24px;
   border-radius: 2%;
   -webkit-border-radius: 2%;
   -moz-border-radius: 2%;
   -ms-border-radius: 2%;
   -o-border-radius: 2%;
+
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .buttonCampus {
-  background-color: #042269;
+  background-color: #183883;
   color: #ffffff;
-  font-weight: bold;
   display: flex;
-  width: 110%;
+  width: 100%;
   justify-content: center;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
-  margin: 5px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -76,22 +77,25 @@
   -moz-transition: 0.5s;
   -ms-transition: 0.5s;
   -o-transition: 0.5s;
+
+  cursor: pointer;
+  background-color: #2f4c8f;
+  box-shadow: 0 5px 2px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .TextButton {
   color: #ffffff;
-  font-weight: bold;
+  font-weight: 'bold';
   font-size: 15px;
 }
 
 .buttonCampusAlternative {
-  background-color: #2a53b3;
+  background-color: #2f4c8f;
   display: flex;
-  width: 110%;
+  width: 100%;
   justify-content: center;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
-  margin: 5px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -106,21 +110,24 @@
   -moz-transition: 0.5s;
   -ms-transition: 0.5s;
   -o-transition: 0.5s;
+
+  cursor: pointer;
+  box-shadow: 0 5px 2px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .buttonLogin {
-  background-color: #2b753ee7;
+  background-color: #129433e7;
   display: flex;
-  width: 110%;
+  width: 100%;
   justify-content: center;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
-  margin: 5px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+
 }
 
 .buttonLogin:hover {
@@ -130,6 +137,7 @@
   -moz-transition: 0.5s;
   -ms-transition: 0.5s;
   -o-transition: 0.5s;
+  box-shadow: 0 5px 2px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .Clouds {
@@ -152,6 +160,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -161,6 +170,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -203,6 +213,7 @@
   from {
     transform: translateX(100%) translateZ(0);
   }
+
   to {
     transform: translateX(-15%) translateZ(0);
   }
@@ -212,6 +223,7 @@
   from {
     transform: translateX(100%) translateZ(0);
   }
+
   to {
     transform: translateX(-15%) translateZ(0);
   }
@@ -221,19 +233,23 @@
   from {
     transform: translateX(100%) translateY(-100%) translateZ(0);
   }
+
   50% {
     transform: translateX(55%) translateY(0) translateZ(0);
   }
+
   to {
     transform: translateX(-5%) translateY(-100%) translateZ(0);
   }
 }
 
 @-webkit-keyframes FadeFloat {
+
   0%,
   100% {
     opacity: 0;
   }
+
   5%,
   90% {
     opacity: 1;
@@ -241,10 +257,12 @@
 }
 
 @keyframes FadeFloat {
+
   0%,
   100% {
     opacity: 0;
   }
+
   5%,
   90% {
     opacity: 1;
