fix: map styles

--- a/src/pages/map/styles/MapSideBar.module.css
+++ b/src/pages/map/styles/MapSideBar.module.css
@@ -11,7 +11,7 @@
   transition: transform 0.4s ease;
   opacity: 0.97;
   overflow-y: scroll;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .sidebar::-webkit-scrollbar {
@@ -94,7 +94,7 @@
   gap: 10px;
 }
 
-.range input[type="range"] {
+.range input[type='range'] {
   cursor: pointer;
   width: 100%;
 }
@@ -116,7 +116,6 @@
   letter-spacing: 0;
   cursor: pointer;
   padding: 4px 20px;
-  width: 100%;
   display: flex;
   align-items: center;
   transition: all 0.3s ease;
@@ -126,13 +125,13 @@
   background: rgb(244, 244, 244, 0.5);
 }
 
-.radio input[type="radio"]:hover:before {
+.radio input[type='radio']:hover:before {
   color: black;
   border-color: black;
 }
 
-.radio input[type="radio"]:before {
-  content: "";
+.radio input[type='radio']:before {
+  content: '';
   background: #f4f4f4;
   border-radius: 100%;
   border: 1px solid #b4b4b4;
@@ -148,22 +147,22 @@
   margin-left: -1px;
 }
 
-.radio input[type="radio"]:checked:before {
+.radio input[type='radio']:checked:before {
   background-color: black;
 }
 
-.radio input[type="radio"]:focus:before {
+.radio input[type='radio']:focus:before {
   outline: none;
   border-color: black;
 }
 
-.radio input[type="radio"]:disabled:before {
+.radio input[type='radio']:disabled:before {
   box-shadow: inset 0 0 0 4px #f4f4f4;
   border-color: #b4b4b4;
   background: #b4b4b4;
 }
 
-.radio input[type="radio"]:empty:before {
+.radio input[type='radio']:empty:before {
   margin-right: 0;
 }
 
