--- a/src/pages/map/styles/MapHeader.module.css
+++ b/src/pages/map/styles/MapHeader.module.css
@@ -3,7 +3,7 @@
   justify-content: flex-start;
   align-items: center;
   height: 45px;
-  width: calc(100% - 28em);
+  width: calc(100% - 31em);
   position: fixed;
   padding: 0 10px;
   top: 10px;
@@ -31,7 +31,6 @@
   display: none;
 }
 
-
 .item {
   background: #fff;
   border-radius: 10px;
@@ -45,7 +44,7 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   cursor: pointer;
 }
 
@@ -59,12 +58,11 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
-
 .button_right {
   background: #fff;
   border-radius: 15px;
-  padding: 7px 20px;
-  height: 100%;
+  padding: 4px 20px;
+  height: 30px;
   color: #333;
   text-decoration: none;
   transition: all 0.2s ease-in-out;
@@ -72,12 +70,12 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   cursor: pointer;
 
   position: sticky;
-  top: 14px;
-  right: -10px;
+  top: 0;
+  right: -11px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
   z-index: 999;
 }
@@ -85,8 +83,8 @@
 .button_left {
   background: #fff;
   border-radius: 15px;
-  padding: 7px 20px;
-  height: 100%;
+  padding: 4px 20px;
+  height: 30px;
   color: #333;
   text-decoration: none;
   transition: all 0.2s ease-in-out;
@@ -94,12 +92,12 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   cursor: pointer;
 
   position: sticky;
-  top: 14px;
-  left: -10px;
+  top: 0px;
+  left: -12px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
   z-index: 999;
 }
